--- a/pepeizqs deals web/runtimeconfig.json
+++ b/pepeizqs deals web/runtimeconfig.json
@@ -1,7 +1,8 @@
 {
   "runtimeOptions": {
     "configProperties": {
-
+      "System.GC.Server": true,
+      "System.GC.DynamicAdaptationMode": 1
     }
   }
 }
