--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -11,8 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Pages\Componentes\Secciones\Deseados.razor~RF12f15e0c.TMP" />
-    <None Remove="Pages\Componentes\Secciones\Portada.razor~RF46b099ac.TMP" />
+    <None Remove="Idiomas\HistoricalLows.es-ES.json~RF3f6add0.TMP" />
   </ItemGroup>
 
   <ItemGroup>
@@ -101,75 +100,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
-    <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Bundles.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Deseados.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Juego.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Tareas.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\api.cshtml" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Api.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Bundle.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Noticia.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Seo.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Sorteos.razor" />
-    <_ContentIncludedByDefault Remove="Pages\gog.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Juego.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Sorteos.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Pages\api.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Tareas.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Bundle.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\api.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\gog.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Api.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Noticia.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Bundles.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Seo.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Deseados.razor" />
+    <Folder Include="Recursos\" />
   </ItemGroup>
 
 </Project>
