--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -50,6 +50,7 @@
     <PackageReference Include="Toolbelt.Blazor.HeadElement.Abstractions" Version="7.1.0" />
     <PackageReference Include="Toolbelt.Blazor.HeadElement.ServerPrerendering" Version="7.3.1" />
     <PackageReference Include="Toolbelt.Blazor.HeadElement.Services" Version="7.3.1" />
+    <PackageReference Include="TweetinviAPI.AspNetPlugin" Version="5.0.4" />
   </ItemGroup>
 
   <ItemGroup>
