--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -73,6 +73,7 @@
     <_ContentIncludedByDefault Remove="Idiomas\Index.en-US.json" />
     <_ContentIncludedByDefault Remove="Pages\Account\Account.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Account\ResetPassword.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Pendientes.razor" />
   </ItemGroup>
 
   <ItemGroup>
@@ -115,6 +116,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Account\ResetPassword.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Pendientes.razor" />
   </ItemGroup>
 
 </Project>
