--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -73,7 +73,10 @@
     <_ContentIncludedByDefault Remove="Idiomas\Index.en-US.json" />
     <_ContentIncludedByDefault Remove="Pages\Account\Account.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Account\ResetPassword.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Avisos.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Juegos.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Pendientes.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Tiendas.razor" />
   </ItemGroup>
 
   <ItemGroup>
@@ -120,6 +123,18 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Componentes\Admin\Pendientes.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Juegos.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Avisos.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Tiendas.razor" />
   </ItemGroup>
 
 </Project>
