--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="BaseDatos\Recompensas\Historial.cs~RF2c9f9c36.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.UseNls" Value="true" />
     <RuntimeHostConfigurationOption Include="System.Net.DisableIPv6" Value="true" />
   </ItemGroup>
@@ -73,10 +77,12 @@
     <_ContentIncludedByDefault Remove="Idiomas\Index.en-US.json" />
     <_ContentIncludedByDefault Remove="Pages\Account\Account.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Account\ResetPassword.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Account\Rewards.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Avisos.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\DLCs.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Juegos.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Pendientes.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Recompensas.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Tiendas.razor" />
   </ItemGroup>
 
@@ -140,6 +146,14 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Componentes\Admin\DLCs.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Account\Rewards.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Recompensas.razor" />
   </ItemGroup>
 
 </Project>
