--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="BaseDatos\Noticias\Insertar.cs~RF3b968c9c.TMP" />
     <None Remove="BaseDatos\Recompensas\Historial.cs~RF2c9f9c36.TMP" />
   </ItemGroup>
 
@@ -55,6 +56,7 @@
     <PackageReference Include="Toolbelt.Blazor.HeadElement.ServerPrerendering" Version="7.3.1" />
     <PackageReference Include="Toolbelt.Blazor.HeadElement.Services" Version="7.3.1" />
     <PackageReference Include="TweetinviAPI.AspNetPlugin" Version="5.0.4" />
+    <PackageReference Include="X.Bluesky" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
