--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Idiomas\Bundle.en-US.json" />
     <_ContentIncludedByDefault Remove="Idiomas\Index.en-US.json" />
     <_ContentIncludedByDefault Remove="Pages\Account\Account.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Account\ResetPassword.cshtml" />
