--- a/pepeizqs deals web/wwwroot/manifest.json
+++ b/pepeizqs deals web/wwwroot/manifest.json
@@ -8,11 +8,12 @@
       "type": "image/png"
     },
     {
-      "src": "/favicons/android-icon-512x512.png",
-      "sizes": "512x512",
+      "src": "/favicons/android-icon-192x192.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ],
+  "start_url": "/",
   "theme_color": "#002033",
   "background_color": "#002033",
   "display": "standalone"
