--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <None Remove="Idiomas\News.es-ES.json~RF63e628.TMP" />
     <None Remove="Pages\Componentes\Secciones\am2uy0r2.1v5~" />
+    <None Remove="Plataformas\Plataforma.cs~RF333f462.TMP" />
   </ItemGroup>
 
   <ItemGroup>
