--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -20,7 +20,9 @@
 
   <ItemGroup>
     <None Remove="Idiomas\News.es-ES.json~RF63e628.TMP" />
+    <None Remove="Pages\Componentes\Cuenta\Juegos\vtvorkc0.rpr~" />
     <None Remove="Pages\Componentes\Secciones\am2uy0r2.1v5~" />
+    <None Remove="Pages\Componentes\Secciones\Bundle.razor~RF1e1c8e.TMP" />
     <None Remove="Plataformas\Plataforma.cs~RF333f462.TMP" />
   </ItemGroup>
 
@@ -32,6 +34,7 @@
   <ItemGroup>
     <PackageReference Include="Blazor-ApexCharts" Version="5.0.1" />
     <PackageReference Include="Blazored.Video" Version="1.0.1" />
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.433" />
     <PackageReference Include="LiteDB" Version="5.0.21" />
     <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.1" />
