--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <PackageReference Include="Blazor-ApexCharts" Version="5.0.1" />
     <PackageReference Include="Blazored.Video" Version="1.0.1" />
+    <PackageReference Include="ImageProcessor" Version="2.9.0" />
+    <PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.433" />
     <PackageReference Include="LiteDB" Version="5.0.21" />
     <PackageReference Include="MailKit" Version="4.8.0" />
@@ -57,6 +59,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Patreon.Net" Version="1.0.2" />
     <PackageReference Include="SimpleMvcSitemap" Version="4.0.1" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.1" />
     <PackageReference Include="Toolbelt.Blazor.HeadElement" Version="7.3.1" />
     <PackageReference Include="Toolbelt.Blazor.HeadElement.Abstractions" Version="7.1.0" />
@@ -123,6 +126,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Componentes\Admin\Recompensas.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\imagenes\webps\" />
   </ItemGroup>
 
 </Project>
