--- a/pepeizqs deals web/Properties/launchSettings.json
+++ b/pepeizqs deals web/Properties/launchSettings.json
@@ -31,6 +31,16 @@
       },
       "sqlDebugging": true,
       "nativeDebugging": true
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:7114",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_URLS": "https://localhost:7114;http://localhost:5120"
+      },
+      "distributionName": ""
     }
   },
   "iisSettings": {
