--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -50,9 +50,11 @@
     <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Patreon.Net" Version="1.0.3" />
+    <PackageReference Include="RedditSharp" Version="1.1.13" />
     <PackageReference Include="SimpleMvcSitemap" Version="4.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.0-preview.1.25080.3" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="10.0.0-preview.1.25080.5" />
+    <PackageReference Include="Telegram.Bot" Version="22.4.4" />
     <PackageReference Include="TweetinviAPI.AspNetPlugin" Version="5.0.4" />
     <PackageReference Include="WebPush-NetCore" Version="1.0.2" />
     <PackageReference Include="X.Bluesky" Version="1.3.0" />
