--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor-ApexCharts" Version="5.1.0" />
+    <PackageReference Include="Discord.Net" Version="3.17.2" />
     <PackageReference Include="ImageProcessor" Version="2.9.0" />
     <PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.433" />
