--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Idiomas\Footer\cubo0ri2.kfw~" />
     <None Remove="Pages\Componentes\Secciones\RSS.razor~RF166eb2d.TMP" />
     <None Remove="Pages\ednnoemi.3ot~" />
   </ItemGroup>
