--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <None Remove="Areas\Identity\Data\xfm50tic.hpc~" />
     <None Remove="Idiomas\Footer\cubo0ri2.kfw~" />
+    <None Remove="Idiomas\PatreonStore\fr.json~RF31997ca.TMP" />
     <None Remove="Pages\Componentes\Admin\Juego.razor~RF299ad35.TMP" />
     <None Remove="Pages\Componentes\Secciones\RSS.razor~RF166eb2d.TMP" />
     <None Remove="Pages\ednnoemi.3ot~" />
